<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/launcher_fragment_grid"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dsychyov.sychyovmd.ui.fragments.launcher.GridFragment">

    <android.support.v7.widget.RecyclerView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:id="@+id/launcher_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:padding="@dimen/launcher_icon_margin"
        tools:context=".activity.LauncherActivity" />
</FrameLayout>
