...
    <string name="preference_background_source_picsum_key" translatable="false">Lorem Picsum</string>
    <string name="preference_background_source_flickr_key" translatable="false">Lorem Flickr</string>
    <string name="preference_background_source_catapi_key" translatable="false">The Cat Api</string>
    <string name="preference_background_source_unsplash_key" translatable="false">Unsplash</string>

    <string name="author_name">Сычев Денис</string>
    <string name="next">Далее</string>
    <string name="welcome_message">Добро пожаловать</string>
    <string name="app_description">Легковесный лаунчер</string>
    <string name="light_theme_radiobutton">Светлая тема</string>
    <string name="dark_theme_radiobutton">Темная тема</string>
    <string name="standard_layout">Стандартный макет</string>
    <string name="standard_layout_description">Портретная: 4 иконки в ряд\nЛандшафтная: 6 иконки в ряд</string>
...
    <string name="profile_vk" translatable="false">VK</string>
    <string name="profile_facebook" translatable="false">Facebook</string>
    <string name="profile_steam" translatable="false">Steam</string>
    <string name="profile_github" translatable="false">Github</string>

    <string name="desktop">Рабочий стол</string>
    <string name="app_add_desktop">Добавить на стол</string>
    <string name="desktop_app_delete">Удалить</string>
    <string name="desktop_app_move">Передвинуть</string>
    <string name="desktop_app_name">Название</string>
    <string name="add_contact_button">Добавить</string>
    <string name="cancel_add_contact_button">Отмена</string>
    <string name="add_contact_title">Добавить URL</string>
...
