<LinearLayout android:layout_weight="1"
    android:id="@+id/dark_theme_radio_button_wrapper"
    android:orientation="horizontal"
    android:gravity="center"
    style="@style/AppTheme.WelcomePageRadiobuttonWrapper"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RadioButton
        android:id="@+id/dark_theme_radio_button"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content" />

    <TextView
        style="@style/AppTheme.WelcomePageThemeRadiobutton"
        android:text='@string/dark_theme_radiobutton' />
</LinearLayout>