<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/app_add_desktop"
        android:title="@string/app_add_desktop" />

    <item android:id="@+id/app_delete"
        android:title="@string/app_delete" />

    <item android:id="@+id/app_frequency"
        android:title="@string/app_frequency" />

    <item android:id="@+id/app_info"
        android:title="@string/app_info" />
</menu>